stoat/src/snapshots/stoat__test_harness__shift_c_adds_selection_below_styled.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: shift-C
focused: #1 of 1
mode: normal
size: 20x5
---
[0m[36m┌──────────────────┐[0m
[0m[36m│[0m[7m[36ma[0m[36mbcd[0m              [0m[36m│[0m
[0m[36m│[0m[7m[36me[0m[36mfgh[0m              [0m[36m│[0m
[0m[36m│ijkl[0m              [0m[36m│[0m
[0m[36m└──────────────────┘[0m
