stoat/src/snapshots/stoat__test_harness__signature_help_active_param_bold.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: snapshot
focused: #1 of 1
mode: normal
size: 60x12
---
[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m1[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;229;192;123m[48;2;40;44;52madd[0m[38;2;171;178;191m[48;2;40;44;52m()[0m[38;2;250;250;250m[48;2;40;44;52m                                                   [0m
[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m1[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m│┌ signature ──────────────────┐[0m[38;2;250;250;250m[48;2;40;44;52m                         [0m
[0m[38;2;250;250;250m[48;2;40;44;52m    [0m[38;2;99;109;131m[48;2;40;44;52m│fn add(x: i32, [0m[1m[38;2;99;109;131m[48;2;40;44;52my: i32[0m[38;2;99;109;131m[48;2;40;44;52m) -> i32│[0m[38;2;250;250;250m[48;2;40;44;52m                         [0m
[0m[38;2;250;250;250m[48;2;40;44;52m    [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[2m[38;2;99;109;131m[48;2;40;44;52madds two integers[0m[38;2;250;250;250m[48;2;40;44;52m            [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                         [0m
[0m[38;2;250;250;250m[48;2;40;44;52m    [0m[38;2;99;109;131m[48;2;40;44;52m└─────────────────────────────┘[0m[38;2;250;250;250m[48;2;40;44;52m                         [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                            [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                            [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                            [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                            [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                            [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                            [0m
[0m[38;2;40;44;52m[48;2;97;175;239m NOR [0m[38;2;250;250;250m[48;2;99;109;131m lsp-did-open-test main.rs [0m[38;2;99;109;131m[48;2;99;109;131m───────────────────────[0m[38;2;250;250;250m[48;2;99;109;131m 1:1 [0m
