stoat/src/snapshots/stoat__test_harness__snapshot_code_action_picker.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: snapshot
focused: #1 of 1
mode: normal
size: 40x12
---
[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m1[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[1m[38;2;97;175;239m[48;2;40;44;52mfn[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;229;192;123m[48;2;40;44;52mfoo[0m[38;2;171;178;191m[48;2;40;44;52m()[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;171;178;191m[48;2;40;44;52m{}[0m[38;2;250;250;250m[48;2;40;44;52m                         [0m
[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m1[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m│┌ code action ┐[0m[38;2;250;250;250m[48;2;40;44;52m                     [0m
[0m[38;2;250;250;250m[48;2;40;44;52m    [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;40;44;52m[48;2;86;182;194m1. Add import[0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                     [0m
[0m[38;2;250;250;250m[48;2;40;44;52m    [0m[38;2;99;109;131m[48;2;40;44;52m│2. Inline[0m[38;2;250;250;250m[48;2;40;44;52m    [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                     [0m
[0m[38;2;250;250;250m[48;2;40;44;52m    [0m[38;2;99;109;131m[48;2;40;44;52m└─────────────┘[0m[38;2;250;250;250m[48;2;40;44;52m                     [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                        [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                        [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                        [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                        [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                        [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                        [0m
[0m[38;2;40;44;52m[48;2;97;175;239m NOR [0m[38;2;250;250;250m[48;2;99;109;131m lsp-did-open-test main.rs [0m[38;2;99;109;131m[48;2;99;109;131m───[0m[38;2;250;250;250m[48;2;99;109;131m 1:1 [0m
