stoat/src/snapshots/stoat__test_harness__snapshot_completion_popup_scrolling.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: snapshot
focused: #1 of 1
mode: insert
size: 40x16
---
[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m1[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                    [0m
[0m[38;2;250;250;250m[48;2;40;44;52m    [0m[38;2;99;109;131m[48;2;40;44;52m┌───────┐[0m[38;2;250;250;250m[48;2;40;44;52m                           [0m
[0m[38;2;250;250;250m[48;2;40;44;52m    [0m[38;2;99;109;131m[48;2;40;44;52m│item_03│[0m[38;2;250;250;250m[48;2;40;44;52m                           [0m
[0m[38;2;250;250;250m[48;2;40;44;52m    [0m[38;2;99;109;131m[48;2;40;44;52m│item_04│[0m[38;2;250;250;250m[48;2;40;44;52m                           [0m
[0m[38;2;250;250;250m[48;2;40;44;52m    [0m[38;2;99;109;131m[48;2;40;44;52m│item_05│[0m[38;2;250;250;250m[48;2;40;44;52m                           [0m
[0m[38;2;250;250;250m[48;2;40;44;52m    [0m[38;2;99;109;131m[48;2;40;44;52m│item_06│[0m[38;2;250;250;250m[48;2;40;44;52m                           [0m
[0m[38;2;250;250;250m[48;2;40;44;52m    [0m[38;2;99;109;131m[48;2;40;44;52m│item_07│[0m[38;2;250;250;250m[48;2;40;44;52m                           [0m
[0m[38;2;250;250;250m[48;2;40;44;52m    [0m[38;2;99;109;131m[48;2;40;44;52m│item_08│[0m[38;2;250;250;250m[48;2;40;44;52m                           [0m
[0m[38;2;250;250;250m[48;2;40;44;52m    [0m[38;2;99;109;131m[48;2;40;44;52m│item_09│[0m[38;2;250;250;250m[48;2;40;44;52m                           [0m
[0m[38;2;250;250;250m[48;2;40;44;52m    [0m[38;2;99;109;131m[48;2;40;44;52m│item_10│[0m[38;2;250;250;250m[48;2;40;44;52m                           [0m
[0m[38;2;250;250;250m[48;2;40;44;52m    [0m[38;2;99;109;131m[48;2;40;44;52m│item_11│[0m[38;2;250;250;250m[48;2;40;44;52m                           [0m
[0m[38;2;250;250;250m[48;2;40;44;52m    [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;40;44;52m[48;2;86;182;194mitem_12[0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                           [0m
[0m[38;2;250;250;250m[48;2;40;44;52m    [0m[38;2;99;109;131m[48;2;40;44;52m└───────┘[0m[38;2;250;250;250m[48;2;40;44;52m                           [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                        [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                        [0m
[0m[38;2;40;44;52m[48;2;152;195;121m INS [0m[38;2;250;250;250m[48;2;99;109;131m ws buf.txt [0m[38;2;99;109;131m[48;2;99;109;131m──────────────────[0m[38;2;250;250;250m[48;2;99;109;131m 1:1 [0m
