stoat/src/snapshots/stoat__test_harness__snapshot_completion_popup_with_match.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: snapshot
focused: #1 of 1
mode: insert
size: 40x12
---
[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m1[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52mpri                                 [0m
[0m[38;2;250;250;250m[48;2;40;44;52m       [0m[38;2;99;109;131m[48;2;40;44;52m┌───────┐[0m[38;2;250;250;250m[48;2;40;44;52m                        [0m
[0m[38;2;250;250;250m[48;2;40;44;52m       [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;40;44;52m[48;2;229;192;123mpri[0m[38;2;40;44;52m[48;2;86;182;194mntln[0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                        [0m
[0m[38;2;250;250;250m[48;2;40;44;52m       [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;40;44;52m[48;2;229;192;123mpri[0m[38;2;99;109;131m[48;2;40;44;52mnt[0m[38;2;250;250;250m[48;2;40;44;52m  [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                        [0m
[0m[38;2;250;250;250m[48;2;40;44;52m       [0m[38;2;99;109;131m[48;2;40;44;52m│panic[0m[38;2;250;250;250m[48;2;40;44;52m  [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                        [0m
[0m[38;2;250;250;250m[48;2;40;44;52m       [0m[38;2;99;109;131m[48;2;40;44;52m└───────┘[0m[38;2;250;250;250m[48;2;40;44;52m                        [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                        [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                        [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                        [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                        [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                        [0m
[0m[38;2;40;44;52m[48;2;152;195;121m INS [0m[38;2;250;250;250m[48;2;99;109;131m ws buf.txt [0m[38;2;99;109;131m[48;2;99;109;131m──────────────────[0m[38;2;250;250;250m[48;2;99;109;131m 1:4 [0m
